fixed sidebar stuff on tablet

--- a/app/assets/stylesheets/partials/stockpage-sidebar-top-analysts.css.scss
+++ b/app/assets/stylesheets/partials/stockpage-sidebar-top-analysts.css.scss
@@ -8,13 +8,13 @@
 }
 
 .stockpage-side-analysts-header {
-	height: 47px;
+	height: 36px;
 	color: #808080;
-	font-size: 18px;
+	font-size: 13px;
 	font-weight: 300;
 	margin-left: 10px;
 	margin-right: 10px;
-	padding-top: 14px;
+	padding-top: 11px;
 	border-bottom: 1px solid rgba(0,0,0,.1);
 }
 
@@ -52,4 +52,20 @@
 .stockpage-side-analysts-box a:hover {
 	background-color: rgba(124,181,236,.06);
 	color: #7cb5ec;
+}
+
+
+@media (min-width: 991px) {
+
+.stockpage-side-analysts-header {
+	height: 47px;
+	color: #808080;
+	font-size: 18px;
+	font-weight: 300;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding-top: 14px;
+	border-bottom: 1px solid rgba(0,0,0,.1);
+}
+
 }
