--- a/app/assets/stylesheets/partials/userpage-sidebar-img-info.css.scss
+++ b/app/assets/stylesheets/partials/userpage-sidebar-img-info.css.scss
@@ -6,22 +6,27 @@
 
 .user-page-sidebar-image-overlay {
 	position: relative;
-	height: 47px;
+	height: 36px;
 	background: rgba(0,0,0,0.7);
-	margin-top: -50px;
+	margin-top: -36px;
 	padding-left: 10px;
 	padding-right: 10px;
-	padding-top: 9px;
+	padding-top: 4px;
 }
 
 .user-sidebar-image-username p {
-	margin-top: 4px;
+	margin-top: 6px;
 	color: #E6E6E6;
-	font-size: 18px;
+	font-size: 15px;
+}
+
+.follow-btn-div {
+	padding-top: 4px;
 }
 
 .follow-btn-div input {
-	border: solid 1px rgba(255,255,255,.85);;
+	display: inline-block;
+	border: solid 1px rgba(255,255,255,.85);
 	padding-top: 2px;
 	padding-bottom: 2px;
 	font-size: 10px;
@@ -53,6 +58,38 @@
 	margin-bottom: 0px;
 	padding-left: 10px;
 	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: #919191;
+	font-size: 12px;
+	line-height: 18px;
+}
+
+
+@media (min-width: 991px) {
+
+
+.user-sidebar-image-username p {
+	margin-top: 4px;
+	color: #E6E6E6;
+	font-size: 18px;
+}
+
+.user-page-sidebar-image-overlay {
+	position: relative;
+	height: 47px;
+	background: rgba(0,0,0,0.7);
+	margin-top: -50px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 9px;
+}
+
+.user-sidebar-bio {
+	background-color: #fff;
+	margin-bottom: 0px;
+	padding-left: 10px;
+	padding-right: 10px;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	color: #919191;
@@ -60,8 +97,5 @@
 	line-height: 18px;
 }
 
-
-
-
-
+}
 
